PEC1 v0.1.2 - Prueba loading lazy solo background

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
                                 class="section__card-img"
                                 src="/src/assets/images/home/castle-home-card.jpg-260.webp"
                                 alt="Castillo de Edimburgo"
+                                loading="lazy"
                                 width="600"
                                 height="400"
                             />
@@ -110,6 +111,7 @@
                                 class="section__card-img"
                                 src="/src/assets/images/home/holyrood-palace-home-card.jpg-260.webp"
                                 alt="Palacio de Holyrood"
+                                loading="lazy"
                                 width="600"
                                 height="400"
                             />
@@ -124,6 +126,7 @@
                                 class="section__card-img"
                                 src="/src/assets/images/home/arthurs-seat-home-card.jpg-260.webp"
                                 alt="Asiento de Arturo"
+                                loading="lazy"
                                 width="600"
                                 height="400"
                             />
@@ -138,6 +141,7 @@
                                 class="section__card-img"
                                 src="/src/assets/images/home/st-andrews-day-home-card.jpg-260.webp"
                                 alt="Celebración de San Andrés"
+                                loading="lazy"
                                 width="600"
                                 height="400"
                             />
